# ml-intern-kit

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  bootstrap.sh  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/skills/env-bootstrap/: SKILL.md
.claude/skills/eval-model/: SKILL.md
.claude/skills/inspect-dataset/: SKILL.md
.claude/skills/launch-hf-job/: SKILL.md
.claude/skills/research-recipe/: SKILL.md
.claude/skills/rocm-strix-halo/: SKILL.md
.claude/skills/train-dpo/: SKILL.md
.claude/skills/train-mlx/: SKILL.md
.claude/skills/train-sft/: SKILL.md
configs/: mlx_default.yaml  sft_default.yaml
experiments/: README.md
experiments/_template/: README.md  config.yaml  notes.md
scripts/: doctor.py  dump_mlx_jsonl.py  eval_lm.py  inspect_dataset.py  launch_hf_job.py  mlx_finetune.py  train_dpo.py  train_grpo.py  train_sft.py
